@@ -32,6 +32,7 @@ requires:
   Cwd: '0'
   English: '0'
   File::Spec: '0'
+  Getopt::Long: '0'
   perl: '5.006'
   strict: '0'
   warnings: '0'
