@@ -9,7 +9,7 @@ VERSION
 
 SYNOPSIS
 
-    sshss [shell]
+    sshss [-h <home>] [shell]
 
 DESCRIPTION
 
@@ -41,6 +41,15 @@ DESCRIPTION
     sshss uses no non-core modules.
 
 OPTIONS
+
+    home
+
+      Specifies the directory to set as your home directory. sshss will set
+      the HOME environment variale and change to this directory.
+
+      If this is not specified, and sshss is saved inside a .ssh directory
+      the parent of the .ssh directory is used as home directory. Otherwise
+      nothing is changed.
 
     shell
 
